# Minesweeper_Backtracking

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: BackTracking.cpp  BackTracking.h  Board.cpp  Board.h  Highlighter.cpp  Highlighter.h  MinesweeperApp.cpp  MinesweeperApp.h  Node.cpp  Node.h  TileSprite.cpp  TileSprite.h  main.cpp
